[package]
name = "bldy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
arch = { version = "0.1.0", path = "../libcrosvm/arch" }
argh = "0.1.12"
base = { version = "0.1.0", path = "../libcrosvm/base" }
cros_async = { version = "0.1.1", path = "../libcrosvm/cros_async" }
devices = { version = "0.1.0", path = "../libcrosvm/devices" }
jail = { version = "0.1.0", path = "../libcrosvm/jail" }
libcrosvm = { version = "0.1.0", path = "../libcrosvm" }
sentry = "0.32.2"
serde = "1.0.197"
serde_json = "1.0.115"

[patch.crates-io]
audio_streams = { path = "../libcrosvm/common/audio_streams" }
base = { path = "../libcrosvm/base" }
cros_async = { path = "../libcrosvm/cros_async" }
data_model = { path = "../libcrosvm/common/data_model" }
libcras = { path = "../libcrosvm/libcras_stub" }                        # ignored by ebuild
sync = { path = "../libcrosvm/common/sync" }
minijail = { path = "../libcrosvm/third_party/minijail/rust/minijail" } # ignored by ebuild
